G/tests/fail/dup_enum_variant.g
// Hai enum dùng chung tên biến thể 'Y' -> C đụng độ hằng số. G phải bắt sớm.
enum A { X, Y }
enum B { Y, Z }
fn main() -> int { return 0 }
